# MAI_AILawyer

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/experiments/: graph_snapshots.py  llm_test.py
backend/experiments/auth/: main.py
backend/src/: config.py  exceptions.py  logs.py  main.py
backend/src/api/: auth.py  deps.py  issue.py  issue_schemas.py  laws.py  profile.py  routers.py  schemas.py  utils.py
backend/src/application/: provider.py
backend/src/core/: auth.py  container.py  graph_controller.py  interface.py  issue_chat_service.py  issue_graph.py  issue_service.py  laws.py  llm.py  llm_use_cases.py  state_service.py  templates.py
backend/src/database/: connection.py  models.py  user.py
backend/src/dto/: laws.py  templates.py
backend/src/storage/: graph_checkpoint_saver.py
backend/templates/: Obyazanie_vidat_trudovuyu_knizhku.docx  Snyatie_discipl_vziskaniya.docx  free_template.docx  o_vosstanovlenii_na_raboty.docx
backend/tests/api/: confest.py  test_auth.py  test_auth_integration.py
backend/tests/graph/: test_chat_graph_common.py  test_full_chat_graph.py  test_laws_analysis_subgraph.py
backend/tests/tests_api/: confest.py  test_auth.py  test_auth_integration.py  test_issue_integration.py
backend/tests/tests_graph/: test_chat_graph_common.py  test_free_template_subgraph.py  test_full_chat_graph.py  test_laws_analysis_subgraph.py  test_strict_template_subgraph.py  test_template_analysis_subgraph.py
(+92 files in other folders)
