[project]
name = "mai-ailawyer"
version = "0.1.0"
description = ""
authors = [
    {name = "TheMrKan",email = "mrkan2017@gmail.com"}
]
package-mode = false

requires-python = "3.12.10"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
