[project]
name = "mai-ailawyer"
version = "0.1.0"
description = ""
authors = [
    {name = "TheMrKan",email = "mrkan2017@gmail.com"}
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "langgraph (>=0.6.10,<0.7.0)",
    "langchain (==0.3.27)",
    "chromadb (>=1.3.0,<2.0.0)",
    "docxtpl (>=0.20.2,<0.21.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-jose (==3.5.0)",
    "yandex-cloud-ml-sdk (==0.17.1)",
    "yandexcloud (==0.371.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
